# Rymfony

./: .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bootstrap.php  build.rs  composer.json  index.php  phpunit.xml.dist
.github/: FUNDING.yml
.github/workflows/: Build.yaml  CI.yaml  build.yaml
certs/: generate-certificate.sh
src/: command_handling.rs  logging.rs  main.rs
src/commands/: ca_install.rs  ca_uninstall.rs  logs.rs  new_symfony.rs  php_list.rs  serve.rs  stop.rs
src/config/: certificates.rs  config.rs  paths.rs
src/http/: caddy.rs  fastcgi_handler.rs  http_server.rs  proxy_server.rs  version.rs
src/php/: binaries.rs  php_server.rs  server_cgi.rs  server_fpm.rs  server_native.rs  structs.rs
src/utils/: current_process_name.rs  list_php_binaries.rs  logger.rs  network.rs  php_binaries.rs  php_server.rs  php_server_cgi.rs  php_server_fpm.rs  project_directory.rs  project_folder.rs  stop_process.rs
tests/: .gitignore  AbstractHttpTestCase.php  HttpServerExtension.php  HttpTestCase.php  Regex.php  ServerTest.php  composer.json  phpunit.xml.dist  test-run-linux.syst  test-run-twice-linux.syst  test-send-get-query.syst  test-send-http-cookie.syst  test-send-http-post-query.syst  test-send-http-post-with-file-query.syst  test-send-https-post-with-file-query.syst  test-send-post-query.syst  test-serve-binary.syst  test.bats  test_request.bash  test_windows.syst
tests/Rymfony/: HttpServerExtension.php  HttpTestCase.php  ServerTest.php
tests/assets/php_serve_binary/: index.php
tests/helpers/: common.bash
tests/php_serve_binary/: index.php
