[package]
name = "rymfony"
version = "0.1.0"
authors = ["Alex Rock Ancelet <pierstoval@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = "3.1"
colored = "2"
console = "0.15"
ctrlc = { version = "3.2", features = ["termination"] }
dirs = "4.0"
env_logger = "0.9"
glob = "0.3"
is_executable = "1.0"
linemux = "0.2"
log = "0.4"
os_info = { version = "3.4", default-features = false }
pretty_env_logger = "0.4"
prettytable-rs = "0.8"
regex = "1.5"
runas = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.23"
tokio = { version = "1.18", features = ["rt-multi-thread"]}
version-compare = "0.1"
which = "4.2"

[target.'cfg(not(target_family = "windows"))'.dependencies]
users = "0.11"

[build-dependencies]
which = "4.2"

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true # Optimize at the link stage with "Link Time Optimization"
codegen-units = 1 # Slower compilation, but more optimization
